--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -5,6 +5,8 @@ metadata:
   annotations:
     github.com/project-slug: mmussett/OrderRetrieveOrchestrator
     backstage.io/techdocs-ref: dir:.
+  tags:
+    - flogo
 spec:
   type: other
   lifecycle: unknown
