--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -1,7 +1,7 @@
 # This workflow will build a Java project with Ant
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-ant
 
-name: Java CI
+name: Flogo CI
 
 on:
   push:
@@ -12,17 +12,10 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
-
+    runs-on: self-hosted
+    
     steps:
     - uses: actions/checkout@v4
-    - name: Set up JDK 11
-      uses: actions/setup-java@v3
-      with:
-        java-version: '11'
-        distribution: 'temurin'
-    - uses: sergeysova/jq-action@v2
-      with:
-        cmd: jq -n env
+
     - name: Build with Ant
       run: ant -noinput -buildfile build.xml
