--- a/build.xml
+++ b/build.xml
@@ -175,7 +175,7 @@
         <exec executable="curl">
             <arg value="-s" />
             <arg value="--location" />
-            <arg value="https://eu.api.cloud.tibco.com/tci/v1/subscriptions/0/app/build/flogo/{build-id}?compress=true" />
+            <arg value="https://eu.api.cloud.tibco.com/tci/v1/subscriptions/0/app/build/flogo/{build_id}?compress=true" />
             <arg value="--header" />
             <arg value="accept: application/octet-stream" />
             <arg value="--header" />
