--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -14,7 +14,7 @@ jobs:
     env:
       CLIENT_ID: ${{secrets.CLIENT_ID}}
       CLIENT_SECRET: ${{secrets.CLIENT_SECRET}}
-      APP_ID: APP_ID
+      APP_ID: ${{env.APP_ID}}
       APP_JSON: APP_JSON
       EXECUTABLE_NAME: EXECUTABLE_NAME
       TARGET_ARCH: TARGET_ARCH
